Adding layout 7: Sharing a playlist on a route

--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="add_playlist_to_route">Add Playlist To Route</string>
+    <string name="share_button">Share</string>
+    <string name="back_button">Back</string>
+    <string name="start">Start</string>
+    <string name="end">End</string>
+    <string name="playlist_to_share_title">Playlist to be shared</string>
 </resources>
