--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_routes">Routes</string>
     <string name="title_profile">Profile</string>
     <string name="save_button">Save</string>
-    <string name="return_button" >Return</string>
+    <string name="return_button">Return</string>
     <string name="form_duration">Desired playlist duration:</string>
     <string name="form_add_songs">Add some songs to your playlist</string>
     <string name="form_title">Playlist Title</string>
@@ -26,5 +26,7 @@
     <string name="followers">Followers</string>
     <string name="shared_routes">Shared Routes</string>
     <string name="following">Following</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
