--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="followers">Followers</string>
     <string name="shared_routes">Shared Routes</string>
     <string name="following">Following</string>
+    <string name="playlistFollowers">followers: </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
