--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -28,5 +28,8 @@
     <string name="following">Following</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="playlist_x">Playlist X</string>
+    <string name="playlist_cover" />
+    <string name="playlist_covers">Playlist</string>
 
 </resources>
