--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">Trackify</string>
+
+    <!-- bottom navigation -->
     <string name="title_playlists">Playlists</string>
     <string name="title_routes">Routes</string>
     <string name="title_profile">Profile</string>
-    <string name="save_button">Save</string>
-    <string name="return_button">Return</string>
+
     <string name="form_duration">Desired playlist duration:</string>
     <string name="form_add_songs">Add some songs to your playlist</string>
     <string name="form_title">Playlist Title</string>
@@ -26,6 +27,21 @@
     <string name="followers">Followers</string>
     <string name="shared_routes">Shared Routes</string>
     <string name="following">Following</string>
+
+    <string name="playlistFollowers">followers: </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- playlists create -->
+    <string name="save_button">Save</string>
+    <string name="save_button_description">Save playlist button</string>
+
+    <!-- plurals -->
+    <plurals name="tracks">
+        <item quantity="one">%d track</item>
+        <item quantity="other">%d tracks</item>
+    </plurals>
     <plurals name="minutes">
         <item quantity="one">%d minute</item>
         <item quantity="other">%d minutes</item>
@@ -34,12 +50,4 @@
         <item quantity="one">%d hour</item>
         <item quantity="other">%d hours</item>
     </plurals>
-    <plurals name="tracks">
-        <item quantity="one">%d track</item>
-        <item quantity="other">%d tracks</item>
-    </plurals>
-    <string name="playlistFollowers">followers: </string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
 </resources>
