--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -9,9 +9,8 @@
     <string name="form_duration">Desired playlist duration:</string>
     <string name="form_add_songs">Add some songs to your playlist</string>
     <string name="form_title">Playlist Title</string>
-    <string name="form_artist">Artist</string>
     <string name="form_selected_songs">Current selected songs</string>
-    <string name="form_song_title">Song Title</string>
+    <string name="form_song_search">Search your song</string>
     <string name="form_min">min</string>
     <string name="form_min_input">30</string>
     <string name="form_search_button">Search song button</string>
