--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Trackify</string>
 
     <!-- bottom menu -->
     <string name="playlists_menu">Playlists</string>
-    <string name="routes_menu">Routes</string>
+    <string name="routes_menu">Explore</string>
     <string name="profile_menu">Profile</string>
 
     <string name="form_duration">Desired playlist duration:</string>
@@ -35,9 +36,15 @@
 
     <string name="playlistFollowers">followers: </string>
 
-    <!-- create playlist -->
+    <!-- playlists landing -->
+    <string name="create_playlist_menu">Create playlist</string>
+
+    <!-- create playlist landing -->
     <string name="save_button">Save</string>
     <string name="save_button_description">Save playlist button</string>
+
+    <!-- routes landing -->
+    <string name="create_route_menu">Create route</string>
 
     <!-- plurals -->
     <plurals name="tracks">
