Added popup on playlist details

--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -55,6 +55,8 @@
     <!-- routes landing -->
     <string name="create_route_menu">Create route</string>
 
+    <string name="popup_play">Play</string>
+
     <!-- plurals -->
     <plurals name="tracks">
         <item quantity="one">%d track</item>
