--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -54,8 +54,12 @@
 
     <!-- routes landing -->
     <string name="create_route_menu">Create route</string>
+    <string name="share_route_title">Sharing route</string>
+    <string name="share_route_text">I have been doing a route with trackify</string>
 
-    <string name="popup_play">Play</string>
+    <!-- popup -->
+    <string name="popup_share">Share</string>
+    <string name="popup_delete">Delete</string>
 
     <!-- plurals -->
     <plurals name="tracks">
@@ -69,5 +73,9 @@
     <plurals name="hours">
         <item quantity="one">%d hour</item>
         <item quantity="other">%d hours</item>
+    </plurals>
+    <plurals name="followers">
+        <item quantity="one">%d follower</item>
+        <item quantity="other">%d followers</item>
     </plurals>
 </resources>
