--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Trackify</string>
-
-    <!-- bottom menu -->
-    <string name="playlists_menu">Playlists</string>
-    <string name="routes_menu">Explore</string>
-    <string name="profile_menu">Profile</string>
-
+    <!-- TODO: organize this strings -->
     <string name="form_duration">Desired playlist duration:</string>
     <string name="form_title">Playlist Title</string>
     <string name="form_selected_songs">Current selected songs</string>
@@ -15,10 +9,6 @@
     <string name="form_min_input">30</string>
     <string name="form_search_button">Search song</string>
     <string name="add_playlist_to_route">Add Playlist To Route</string>
-    <string name="share_button">Share</string>
-    <string name="start">Start</string>
-    <string name="end">End</string>
-    <string name="playlist_to_share_title">Playlist to be shared</string>
     <string name="start_hint">Start hint</string>
     <string name="end_hint">End hint</string>
     <string name="user">User</string>
@@ -26,21 +16,27 @@
     <string name="shared_routes">Shared Routes</string>
     <string name="following">Following</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="playlist_x">Playlist X</string>
-    <string name="playlist_cover" />
-    <string name="playlist">Playlist</string>
+    <!-- general purpose -->
+    <string name="app">Trackify</string>
+    <string name="start">Start</string>
+    <string name="end">End</string>
+    <string name="share">Share</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
 
-    <string name="playlistFollowers">followers: </string>
+    <!-- bottom menu -->
+    <string name="playlists_menu">Playlists</string>
+    <string name="routes_menu">Explore</string>
+    <string name="profile_menu">Profile</string>
 
     <!-- playlists landing -->
     <string name="create_playlist_menu">Create playlist</string>
-    <string name="save_playlist_menu">Save</string>
 
     <!-- playlist create landing -->
-    <string name="save_button">Save</string>
     <string name="save_button_description">Save playlist button</string>
+
+    <!-- playlist search landing -->
+    <string name="track_add_description">Add track to playlist</string>
 
     <!-- playlist details landing -->
     <string name="playlist_cover_description">Playlist cover</string>
@@ -50,21 +46,28 @@
     <string name="track_more_description">Show track details</string>
     <string name="track_drag_description">Drag and drop track</string>
 
-    <string name="track_add_description">Add track to playlist</string>
-
     <!-- routes landing -->
     <string name="create_route_menu">Create route</string>
-    <string name="share_route_title">Sharing route</string>
-    <string name="share_route_text">I have been doing a route with trackify</string>
 
-    <!-- popup -->
-    <string name="popup_share">Share</string>
-    <string name="popup_delete">Delete</string>
+    <!-- routes create landing -->
+    <string name="playlist_to_share_title">Playlist to be shared</string>
+
+    <!-- user landing -->
+    <string name="share_route_title">Sharing route</string>
+    <string name="share_route_text">I have been doing a route with Trackify</string>
 
     <!-- plurals -->
+    <plurals name="playlists">
+        <item quantity="one">%d playlist</item>
+        <item quantity="other">%d playlists</item>
+    </plurals>
     <plurals name="tracks">
         <item quantity="one">%d track</item>
         <item quantity="other">%d tracks</item>
+    </plurals>
+    <plurals name="followers">
+        <item quantity="one">%d follower</item>
+        <item quantity="other">%d followers</item>
     </plurals>
     <plurals name="minutes">
         <item quantity="one">%d minute</item>
@@ -73,9 +76,5 @@
     <plurals name="hours">
         <item quantity="one">%d hour</item>
         <item quantity="other">%d hours</item>
-    </plurals>
-    <plurals name="followers">
-        <item quantity="one">%d follower</item>
-        <item quantity="other">%d followers</item>
     </plurals>
 </resources>
