Bug fix null previewUrl track

--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="share">Share</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
+    <string name="error">Something went wrong</string>
 
     <!-- login -->
     <string name="login">Login with Spotify</string>
