--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <!-- user landing -->
     <string name="share_route_title">Sharing route</string>
     <string name="share_route_text">I have been doing a route with Trackify</string>
-    <string name="see_playlist">See playlist</string>
+    <string name="view_playlist">View playlist</string>
 
     <!-- plurals -->
     <plurals name="playlists">
