--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <!-- playlist details landing -->
     <string name="playlist_cover_description">Playlist cover</string>
     <string name="spotify_button">Play on Spotify</string>
-    <string name="unfollow_button">Unfollow</string>
+    <string name="tracks_text">Tracks</string>
     <string name="track_cover_description">Track cover</string>
     <string name="track_more_description">Show track details</string>
     <string name="track_drag_description">Drag and drop track</string>
