Shared view model and loading screen when playlist is created

--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
 
     <!-- playlist create landing -->
     <string name="save_button_description">Save playlist button</string>
+    <string name="playlist_save_toast">Playlist created</string>
 
     <!-- playlist search landing -->
     <string name="track_add_description">Add track to playlist</string>
