--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- TODO: organize this strings -->
-    <string name="form_duration">Desired playlist duration:</string>
+    <string name="form_duration">Playlist duration:</string>
     <string name="form_title">Playlist Title</string>
     <string name="form_selected_songs">Current selected songs</string>
     <string name="form_song_search">Search your song</string>
