--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="followersNotFound">Could not find followers</string>
     <string name="couldNotFollow">Could not follow user</string>
     <string name="couldNotUnfollow">Could not unfollow user</string>
+    <string name="couldNotFindRoutes">Could not find any routes</string>
     <string name="internet">No internet connection</string>
     <string name="preview_url">Preview unavailable for this track</string>
 
