--- a/Trackify/app/src/main/res/values/strings.xml
+++ b/Trackify/app/src/main/res/values/strings.xml
@@ -84,7 +84,6 @@
     <string name="clear_markers">Clear</string>
     <string name="create_route_title">Create route and select a playlist</string>
 
-
     <!-- user landing -->
     <string name="share_route_title">Sharing route</string>
     <string name="share_route_text">Check this route on Trackify</string>
@@ -92,16 +91,18 @@
     <string name="route_delete_success">Route deleted</string>
     <string name="route_delete_error">Could not delete route</string>
 
+    <!-- user profile -->
+    <string name="follow">Follow</string>
+    <string name="unfollow">Unfollow</string>
+    <string name="qr_code">QR code</string>
+    <string name="scan_qr">Scan QR</string>
+
     <!-- arrays -->
     <string-array name="duration_list">
         <item>Short</item>
         <item>Medium</item>
         <item>Long</item>
     </string-array>
-
-    <!-- user profile -->
-    <string name="follow">Follow</string>
-    <string name="unfollow">Unfollow</string>
 
     <!-- plurals -->
     <plurals name="playlists">
